# medibotv4_ros

./: LICENSE  README.md  arduino-cli.sh  arduino-clii.sh  drive_using_ddpkg.ino  drive_using_ros.ino  drive_using_ros_encoder.ino  drive_using_ros_with_vel.ino  drive_using_ros_with_vel_debug.ino  flashbot.sh  ros_motor_controller_example.ino  todo.txt
medibotv4/: CMakeLists.txt  package.xml
medibotv4/capabilities/: GmappingInterface.yaml  GmappingProvider.yaml  NavigationInterface.yaml  NavigationProvider.yaml  gmapping_capabilities.launch  navigation_capabilities.launch
medibotv4/config/: local_costmap_params.yaml  teb_mantap.yaml
medibotv4/launch/: bringup.launch  bringup_with_camera.launch  bringup_with_imu.launch  capabilities.launch  master.launch  multirobot_rviz.launch  multirobot_simulation.launch  navigation.launch  realsense_right.launch  robot1.launch  robot1_bringup.launch  robot1_bu.launch  robot2.launch  robot2_bringup.launch  rviz.launch  simulation.launch  test.launch  usb_cam.launch  webserver.launch
medibotv4/maps/: gpcl.pgm  gpcl.yaml  gpcl_0.yaml  gpcl_map.yaml  gpcl_map0.pgm  gpcl_map0.yaml  gpcl_map1.pgm  gpcl_map1.yaml  gpcl_map2.pgm  gpcl_map2.yaml  gpcl_map3.pgm  gpcl_map3.yaml  gpcl_map4.pgm  gpcl_map4.yaml  gpcl_map5.pgm  gpcl_map5.yaml  map_new.yaml  mymap.pgm  mymap.yaml  spots.txt  test2.yaml  test_map.pgm  test_map.yaml  testtt.pgm  testtt.yaml
medibotv4/msg/: SensorState.msg
medibotv4/multirobot_launch/: master.launch  multirobot_bringup.launch  multirobot_simulation.launch  robot1.launch  robot1_bringup.launch  robot2.launch  robot2_bringup.launch
medibotv4/rviz/: default.rviz  imu.rviz
medibotv4/spots/: spots.txt  spots.yaml
medibotv4/src/: diff_sim.cpp  diff_tf.py  encoder_ticks_publisher.py  get_coordinates_service_server.py  ip_camera.py  python_http_server.py  roslauncher.cpp  roslaunchers.cpp  save_spots_service_server.py  send_coordinates_action_client.py
medibotv4/srv/: GetSpot.srv  SendGoal.srv  SetSpot.srv
medibotv4/webpage/: index.html
medibotv4_description/: CMakeLists.txt  package.xml
medibotv4_description/gazebo/: medibotv4_materials.gazebo  medibotv4_physics.gazebo  medibotv4_plugins.gazebo
medibotv4_description/launch/: controller.yaml  display.launch  gazebo.launch  urdf.rviz
medibotv4_description/map/: empty_hospital.yaml
medibotv4_description/meshes/: base_link.stl  bottom_panel_1.stl  camera_1.stl  camera_housing_1.stl  caster_1.stl  circuit_housing_1.stl  circuit_panel.stl  left_motor_1.stl  left_realsense_1.stl  lidar_1.stl  monitor_1.stl  mount.stl  pan_servo_1.stl  pan_tilt_mount_1.stl  realsense_housing_1.stl  right_motor_1.stl  right_wheel_1.stl  sonar.stl  stand_1.stl  tilt_servo_1.stl  top_panel.stl
medibotv4_description/urdf/: materials.xacro  medibotv4.trans  medibotv4.xacro
medibotv4_simulation/: CMakeLists.txt  package.xml
(+272 files in other folders)
