<?xml version="1.0"?>
<package format="2">
  <name>medibotv4_description</name>
  <version>0.0.0</version>
  <description>The medibotv4_description package</description>
  <maintainer email="msyahmizulkepli@gmail.com">msyahmizulkepli</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
