<?xml version="1.0"?>
<package format="2">
  <name>medibotv4_simulation</name>
  <version>0.0.0</version>
  <description>The medibotv4_simulation package</description>
  <maintainer email="msyahmizulkepli@gmail.com">msyahmizulkepli</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
